samples/_failures_safe/1761523434_569d24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dde8fe86.c: In function ‘main’:
./samples/SAFE/__tmp_dde8fe86.c:156:5: error: expected expression at end of input
  156 |     if (scanf("%d %d", &start, &end) !=
      |     ^~
./samples/SAFE/__tmp_dde8fe86.c:156:5: error: expected declaration or statement at end of input
